# cognitive-agent-core

./: .gitignore  NOTES.md  README.md  agent_engine.py  app_dashboard.py  cognitive_brain.py  config.py  context_manager.py  core_telemetry.py  cyber_scout.py  event_bus.py  master_orchestrator.py  memory_store.py  pipeline.py  pyproject.toml  rate_limiter.py  requirements.txt  runtime_executor.py  sandbox_actuator.py  scheduler.py  sovereign_brain.py
.github/workflows/: ci.yml
auth/: __init__.py  agent_auth.py
benchmarks/: vector_store_bench.py
core/: memory_store_patch.py  vector_store_faiss.py
core/adapters/: vision_adapters.py
core/cache/: lru_cache.py
core/rate_limiter/: __init__.py  sliding_window.py  token_bucket.py
core/transport/: websocket_handler.py
core/types/: multimodal.py
core/vector/: vector_store.py
docs/: api.md  contributing.md
observability/: __init__.py  tracer.py
plugins/: __init__.py  plugin_loader.py
rag/: __init__.py  retriever.py
tests/: test_master_orchestrator.py  test_memory_store.py  test_memory_store_ttl.py  test_runtime_executor.py  test_websocket_handler.py
tools/: __init__.py  tool_registry.py
